--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,19 @@ dependencies:
   get: ^4.6.5
   flutter_svg: ^1.1.5
   flutter_screenutil: ^5.5.4
+  http: ^0.13.5
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+
+  build_runner: ^2.3.2
+  json_serializable: ^6.5.4
 
 flutter:
   uses-material-design: true
