--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_svg: ^1.1.5
   flutter_screenutil: ^5.5.4
   http: ^0.13.5
+  meta: ^1.8.0
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   json_annotation: ^4.7.0
