--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,9 @@ dependencies:
   flutter_svg: ^1.1.5
   flutter_screenutil: ^5.5.4
   http: ^0.13.5
-  meta: ^1.8.0
-  bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   json_annotation: ^4.7.0
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +29,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
   build_runner: ^2.3.2
+  freezed: ^2.2.1
   json_serializable: ^6.5.4
 
 flutter:
