--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
   json_annotation: ^4.7.0
+  firebase_core: ^0.4.2+2
 
 dev_dependencies:
   flutter_test:
