--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   get: ^4.6.5
   flutter_svg: ^1.1.5
   flutter_screenutil: ^5.5.4
+  firedart: ^0.9.0+1
   http: ^0.13.5
   flutter_bloc: ^8.1.1
   json_annotation: ^4.7.0
