--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   formz: ^0.4.1
   equatable: ^2.0.5
+  desktop_window: ^0.4.0
 
 dev_dependencies:
   flutter_test:
